--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -4,7 +4,7 @@
 }
 .homeText2{
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 6%;
     font-size: 1.5em;
     color: white;
 }
@@ -14,11 +14,17 @@
 }
 .processInfo .display-6{
     padding: 5%;
+    font-weight: 400;
 }
 
-.whatWeDo .display-5{
+.whyUs .display-4{
     padding-bottom: 5%;
+    font-weight: 400;
 }
 .testimonialRecomendations .display-3{
     padding-top: 5%;
+    font-weight: 400;
+}
+.whyUs{
+    margin-top: 5%;
 }
