--- a/src/styling/contact.css
+++ b/src/styling/contact.css
@@ -1,9 +1,8 @@
-form {
+form { /*form styling */
       margin-top: 5%;
-    
 }
   
-form input {
+form input { /*form input styling*/
     width: 100%;
     height: 50px;
     border-radius: 10px;
@@ -12,7 +11,7 @@ form input {
     margin-bottom: 10px;
     display: block;
 }
-form #message {
+form #message { /*message box for form */
     height: 150px;
     width: 100%;
     border: 1px solid #ccc;
@@ -20,7 +19,7 @@ form #message {
     margin-bottom: 10px;
     display: block;
 }
-form button{
+form button{ /* form button styling */
     width: 100%;
     height: 50px;
 
